# COMPI-HW5

./: .gitignore
code/: CMakeLists.txt  generator.cpp  generator.hpp  hw3-output.cpp  hw3-output.hpp  parser.ypp  parser_funcs.cpp  parser_funcs.hpp  scanner.lex  structs.hpp  sym_tables.cpp  sym_tables.hpp
florentz-reference/Feedback/: summary.txt  t03.in  t03.in.out  t04-tricky-set-shadows.in  t04-tricky-set-shadows.in.out  t22-set-nonsense.in  t22-set-nonsense.in.out  t22-set-nonsense.in.res  t23-set-funccalls.in  t23-set-funccalls.in.res
florentz-reference/HW5-CodeGeneration/: CMakeLists.txt  hw3_output.cpp  hw3_output.hpp  parser.ypp  scanner.lex  structures.h  symbol_table.cpp  symbol_table.h  utils.cpp  utils.h  var_generator.cpp  var_generator.h
misc/llvm_examples/: alloca_example.llvm  define_example.llvm  print_1_to_100.llvm
tests/llvm_examples/: fibonacci.llvm  phi_example.llvm
